# scikit-aero

./: .buildinfo  .gitignore  .travis.yml  AUTHORS  COPYING  MANIFEST  README  README.rst  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
_modules/: index.html
_modules/skaero/atmosphere/: coesa.html
_modules/skaero/gasdynamics/: isentropic.html  shocks.html
_sources/: index.txt
doc/: Makefile  make.bat
doc/source/: api.rst  conf.py  index.rst
doc/source/examples/: index.rst
doc/source/skaero/gasdynamics/: index.rst  shocks.rst
doc/source/solar/static/: solar.css
docs/source/: about_skaero.rst  index.rst
docs/source/examples/: Oblique shocks chart.ipynb
docs/source/skaero/: index.rst
docs/source/skaero/atmosphere/: index.rst
docs/source/skaero/gasdynamics/: isentropic.rst  nozzles.rst
docs/source/skaero/geometry/: index.rst
examples/: Oblique shocks chart.ipynb  cd_nozzle.ipynb
skaero/: __init__.py  atmosphere.py  decorators.py
skaero/atmosphere/: coesa.py  isa.py  util.py
skaero/flight/: __init__.py  airspeed.py  dragpolar.py
skaero/gasdynamics/: __init__.py  isentropic.py  nozzles.py  shocks.py
skaero/geometry/: coordinates.py  joukowsky.py
skaero/util/: decorators.py
skaero/utils/: decorators.py
solar/: README.html
src/skaero/: __init__.py  constants.py
src/skaero/atmosphere/: __init__.py  coesa.py  util.py
src/skaero/gasdynamics/: isentropic.py  nozzles.py  shocks.py
src/skaero/geometry/: coordinates.py  joukowsky.py
src/skaero/util/: decorators.py
tests/: si1py.prt  si2py.prt  test_coesa.py  test_coordinates.py  test_gasdynamics.py  test_isentropic.py  test_shocks.py
