[metadata]
name = scikit-aero
version = attr: src.VERSION
url = https://github.com/AeroPython/scikit-aero
download_url = https://github.com/AeroPython/scikit-aero
author = Juan Luis Cano
author_email = juanlu001@gmail.com
mantainer = Jorge Martínez
mantainer_email = ingenierodeaviones@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Sciencie/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
license = BSD
description = Aeronautical engineering calculations in Python
long_description = file: README.txt
keywords =
    aero
    aerospace
    aeronautical
    engineering
    atmosphere
    gas

[options]
zip_safe = False
package_dir =
        =src
packages = find:
install_requires =
    numpy
    scipy
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    coverage
    sphinx>=1.4
    sphinx_rtd_theme
    ipykernel
    nbsphinx
    isort
    pycodestyle
    pytest

[tool:pytest]
addopts = --verbose
python_files = tests/test_*.py

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
